--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,9 +1,9 @@
 
 @import 'aos/dist/aos.css';
 
-@import 'important.css';
+
 @import 'responsive.css';
-@import 'plugin.css';
+
 
 @tailwind base;
 @tailwind components;
@@ -86,31 +86,31 @@ ol {
 
 /* Style the track
 input[type="range"]::-webkit-slider-runnable-track {
-    @apply w-full h-2 cursor-pointer bg-amber-600 rounded;
+    @apply w-full h-2 rounded cursor-pointer bg-amber-600;
 }
 
 input[type="range"]::-moz-range-track {
-    @apply w-full h-2 cursor-pointer bg-amber-600 rounded;
+    @apply w-full h-2 rounded cursor-pointer bg-amber-600;
 }
 
 
 
 input[type="range"]::-moz-range-track {
-    @apply w-full h-2 cursor-pointer bg-amber-600 rounded;
+    @apply w-full h-2 rounded cursor-pointer bg-amber-600;
 }
 
 
 input[type="range"]::-webkit-slider-thumb {
-    @apply h-4 w-4 bg-amber-500 cursor-pointer rounded-full appearance-none -mt-1;
+    @apply w-4 h-4 -mt-1 rounded-full appearance-none cursor-pointer bg-amber-500;
 }
 
 input[type="range"]::-moz-range-thumb {
-    @apply h-4 w-4 bg-amber-500 cursor-pointer rounded-full;
+    @apply w-4 h-4 rounded-full cursor-pointer bg-amber-500;
 }
 
 
 input[type="range"]::-moz-range-thumb {
-    @apply h-4 w-4 bg-green-500 cursor-pointer rounded-full;
+    @apply w-4 h-4 bg-green-500 rounded-full cursor-pointer;
 }
 */
  #support ul {
